# Agribot

./: README.md  readme.html
agri_bot_moveit/: .setup_assistant  CMakeLists.txt  package.xml  robonav.py
agri_bot_moveit/config/: agribot.srdf  fake_controllers.yaml  gazebo_ros_control_pid.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  simple_moveit_controllers.yaml
agri_bot_moveit/launch/: gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  ur5_bringup_moveit.launch
agri_bot_moveit/scripts/: collisionObj.py  constraints.py  end_pose_2.py  manipulation_py.py  old-manipulation.py  pose.py
agri_bot_moveit/src/: exersice.cpp  manipulation.cpp
agri_bot_perception/: CMakeLists.txt  package.xml
agri_bot_perception/scripts/: perception.py
agri_bot_perception/src/: aruco.cpp  perception.cpp
ebot_gazebo/: CMakeLists.txt
ebot_gazebo/launch/: task3_2.launch  task4.launch
ebot_nav/: CMakeLists.txt  package.xml
ebot_nav/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ebot_nav/launch/: amcl.launch  movebase.launch  nav.launch
ebot_nav/rviz/: nav.rviz
ebot_nav/scripts/: aruco.py  navigation.py  odom.py  old - navigation.py
ebot_nav/src/: navigation.cpp  odom.cpp  old- navigation.cpp
tomato_gazebo/launch/: green_house.launch
ur_description/urdf/: e_ur5.urdf.xacro
